[tool.poetry]
name = "pylacus"
version = "1.6.1"
description = "Python CLI and module for lacus"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/ail-project/PyLacus"
documentation = "https://pylacus.readthedocs.io/en/latest/index.html"

readme = "README.md"

classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Security',
    'Topic :: Internet',
]

include = ['README.md']

[tool.poetry.scripts]
pylacus = 'pylacus:main'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
Sphinx = { version = "^7.1.2", optional = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
types-requests = "^2.31.0.2"
ipython = [
    {version = "<8.13.0", python = "<3.9"},
    {version = "^8.13.0", python = ">=3.9"}
]
pytest = "^7.4.0"

[tool.poetry.extras]
docs = ["Sphinx"]

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
