[project]
name = "pylacus"
version = "1.22.3"
description = "Python CLI and module for lacus"
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
repository = "https://github.com/ail-project/PyLacus"
documentation = "https://pylacus.readthedocs.io/en/latest/"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dynamic = ["classifiers"]

dependencies = [
    "requests (>=2.33.0)",
    "lookyloo-models (>=0.1.2,<0.2.0)",
    "deprecated (>=1.3.1,<2.0.0) ; python_version < \"3.13\"",
    "pydantic (>=2.12.5,<3.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)"
]

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
pylacus = 'pylacus:main'

[project.optional-dependencies]
docs = ["Sphinx (>=9.1.0) ; python_version >= \"3.12\""]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-requests = "^2.32.4.20260324"
pytest = "^9.0.2"
types-deprecated = {version="^1.3.1.20260130", markers="python_version < \"3.13\""}

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
